<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, University of Oslo
  ~
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~ Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~ Neither the name of the HISP project nor the names of its contributors may
  ~ be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"/>

    <android.support.v7.widget.CardView
        android:id="@+id/view"
        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp">

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar_circular_navy"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:cpb_color="@color/navy_blue"
            app:cpb_max_sweep_angle="300"
            app:cpb_min_sweep_angle="10"
            app:cpb_rotation_speed="0.8"
            app:cpb_stroke_width="6dp"
            app:cpb_sweep_speed="1.0"/>

        <LinearLayout
            android:id="@+id/re_log_in_views_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <org.hisp.dhis.android.dashboard.ui.views.FontEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/editbox_background_normal"
                    android:drawableLeft="@mipmap/ic_username"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="6dp"
                    android:singleLine="true"
                    app:font="@string/font_regular"/>

                <org.hisp.dhis.android.dashboard.ui.views.FontEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editbox_background_normal"
                    android:drawableLeft="@mipmap/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:singleLine="true"
                    app:font="@string/font_regular"/>

                <org.hisp.dhis.android.dashboard.ui.views.FontButton
                    android:id="@+id/re_log_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_blue_selector"
                    android:singleLine="true"
                    android:text="@string/re_log_in"
                    android:textColor="@color/white"
                    app:font="@string/font_medium"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/dark_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">

                <org.hisp.dhis.android.dashboard.ui.views.FontButton
                    android:id="@+id/delete_and_log_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_red_selector"
                    android:singleLine="true"
                    android:text="@string/clear_and_log_out"
                    android:textColor="@color/white"
                    app:font="@string/font_medium"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>